# glRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
assets/model/bag/: backpack.mtl
assets/shader/common/: light.glsl  pbr.glsl  phong.glsl  shadow.glsl  skybox.glsl
assets/shader/effect/: edge.frag  edge.vert
assets/shader/pass/: bloomBlur.frag  bloomExtract.frag  lightProxy.frag  lightProxy.vert  postprocess.frag  postprocess.vert  shadow.vert  shadowP.frag  shadowP.vert  skybox.frag  skybox.vert
assets/shader/pass/ibl/: brdfLut.frag  brdfLut.vert  capture.vert  irradiance.frag  prefilter.frag
assets/shader/pbr/: pbr.frag  pbr.vert
assets/shader/phong/: phong.frag  phong.vert
assets/shader/primary/: triangle.frag  triangle.vert
core/: CMakeLists.txt  logger.cpp  logger.hpp
core/application/: application.cpp  application.hpp
core/camera/: camera.cpp  camera.hpp  cameraController.cpp  cameraController.hpp  controller.cpp  controller.hpp
core/entity/: entity.cpp  entity.hpp
core/geometry/: mesh.cpp  mesh.hpp  transform.cpp  transform.hpp
core/light/: light.hpp  lightManager.hpp
core/material/: material.cpp  material.hpp  materialBinding.cpp  materialBinding.hpp
core/renderer/: frameBuffer.cpp  frameBuffer.hpp  frameContext.hpp  frameData.hpp  iblPrecompute.cpp  iblPrecompute.hpp  profiler.hpp  renderBackend.cpp  renderBackend.hpp  renderOption.hpp  renderQueue.cpp  renderQueue.hpp  renderStateCache.cpp  renderStateCache.hpp  renderer.cpp  renderer.hpp  rendergraph.cpp  rendergraph.hpp  renderpass.hpp  uniformBuffer.cpp
core/renderer/buffer/: frameBuffer.cpp  frameBuffer.hpp  instanceBuffer.cpp  instanceBuffer.hpp  uniformBuffer.cpp  uniformBuffer.hpp
core/renderer/pass/: forwardOpaquePass.cpp  forwardOpaquePass.hpp  forwardTransparentPass.cpp  forwardTransparentPass.hpp  lightProxyPass.cpp  lightProxyPass.hpp  postProcessPass.cpp  postProcessPass.hpp  renderpass.hpp  shadowPass.cpp  shadowPass.hpp  skyboxPass.cpp  skyboxPass.hpp
core/scene/: entity.cpp  entity.hpp  loader.cpp  loader.hpp  model.cpp  model.hpp  scene.cpp  scene.hpp
core/shader/: shader.cpp  shader.hpp
core/texture/: environmentMap.cpp  environmentMap.hpp  exrIO.cpp  exrIO.hpp  texture.cpp  texture.hpp
core/utils/: logger.cpp  logger.hpp
samples/: CMakeLists.txt
samples/Fuse/: CMakeLists.txt  main.cpp
samples/LightTest/: CMakeLists.txt  main.cpp
samples/PBR/: CMakeLists.txt  main.cpp
samples/PointLightTest/: CMakeLists.txt  main.cpp
samples/Primitives/: CMakeLists.txt  main.cpp
samples/Reflection/: CMakeLists.txt  main.cpp
